--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </style>
 </head>
 <body>
-  <h1>🚴‍♂️ Tour de France 2026 test Poule</h1>
+  <h1>🚴‍♂️ Tour de France 2026 Poule</h1>
   <div class="status">
     <p><strong>✅ TEST LIVE!</strong> Interpolis collega's: deadline 5 juli 12:00</p>
     <p>Aantal deelnemers: <span id="count">0</span></p>
